--- a/app/src/main/res/layout/edittextdialog.xml
+++ b/app/src/main/res/layout/edittextdialog.xml
@@ -2,12 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <EditText
         android:id="@+id/editText55"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textCapWords"
-        android:hint="Enter an item"/>
+        android:inputType="textPersonName"
+        android:hint="Enter input"/>
+
+   
 </LinearLayout>
