--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#137580</color>
+    <color name="colorPrimaryDark">#638a0b</color>
     <color name="colorAccent">#D81B60</color>
     <color name="lightgreen">#3CB371</color>
     <color name="lightergreen">#ebffeb</color>
