--- a/app/src/main/res/layout/list_items2.xml
+++ b/app/src/main/res/layout/list_items2.xml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/lin20"
+        android:orientation="vertical">
     <TextView
         android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="13dp"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
         android:textSize="@dimen/itemsize"
 
         />
-
     <TextView
         android:id="@+id/textView4"
         android:layout_width="match_parent"
@@ -22,7 +25,21 @@
         android:textSize="@dimen/subitemsize"
         android:layout_marginBottom="15dp"
         android:layout_marginLeft="25dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="6dp"
         android:layout_marginRight="25dp"
         />
-</LinearLayout>
+        <TextView
+            android:id="@+id/price"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/subitemsize"
+            android:layout_marginBottom="26dp"
+            android:layout_marginLeft="25dp"
+            android:gravity="end"
+            android:layout_marginTop="6dp"
+            android:layout_marginRight="25dp"
+            />
+    </LinearLayout>
+
+
+</RelativeLayout>
