--- a/app/src/main/res/values-small/dimens.xml
+++ b/app/src/main/res/values-small/dimens.xml
@@ -6,6 +6,7 @@
 
     <dimen name="edittextsize">23sp</dimen>
     <dimen name="edittextsizebtn">20sp</dimen>
+    <dimen name="minwidtheditext">275dp</dimen>
 
 
 </resources>
