--- a/app/src/main/res/layout/activity_create_list.xml
+++ b/app/src/main/res/layout/activity_create_list.xml
@@ -46,10 +46,10 @@
             android:layout_height="0dp"
             android:layout_weight="1" />
 
-        <com.google.android.material.button.MaterialButton
+        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="?android:attr/actionButtonStyle"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:textSize="@dimen/edittextsizebtn"
             android:id="@+id/submitbtn"
             android:textColor="@color/white"
