--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,7 +3,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
-    <dimen name="nav_header_height">176dp</dimen>
+    <dimen name="nav_header_height">250dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 
     <dimen name="itemsize">25sp</dimen>
@@ -11,5 +11,6 @@
 
     <dimen name="edittextsize">23sp</dimen>
     <dimen name="edittextsizebtn">20sp</dimen>
+    <dimen name="minwidtheditext">275dp</dimen>
 
 </resources>
