--- a/app/src/main/res/layout/activity_notificationactivity.xml
+++ b/app/src/main/res/layout/activity_notificationactivity.xml
@@ -22,7 +22,7 @@
         android:gravity="center"
         android:textSize="@dimen/subitemsize"
         android:checked="true"
-        android:text="Receive notifications from MyGroceries"
+        android:text="Receive daily notifications"
         android:switchPadding="16dp"
         tools:layout_editor_absoluteX="188dp"
         tools:layout_editor_absoluteY="93dp" />
@@ -34,7 +34,7 @@
             android:textSize="@dimen/subitemsize"
             android:checked="true"
             android:layout_marginTop="25dp"
-            android:text="Receive your spending notifications from MyGroceries"
+            android:text="Receive spending notifications"
             android:switchPadding="16dp"
             tools:layout_editor_absoluteX="188dp"
             tools:layout_editor_absoluteY="93dp" />
