--- a/app/src/main/res/layout/list_items3.xml
+++ b/app/src/main/res/layout/list_items3.xml
@@ -12,8 +12,8 @@
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:descendantFocusability="blocksDescendants"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="6dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="15dp"
         android:layout_height="wrap_content" />
@@ -21,11 +21,11 @@
     <TextView
         android:id="@+id/textView50"
         android:layout_width="match_parent"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="6dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textSize="@dimen/itemsize"
+        android:textSize="@dimen/subitemsize"
         />
 
 </LinearLayout>
