--- a/app/src/main/res/layout/list_items1_2.xml
+++ b/app/src/main/res/layout/list_items1_2.xml
@@ -12,42 +12,44 @@
             android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="13dp"
+            android:layout_marginTop="4dp"
             android:layout_marginLeft="25dp"
             android:layout_marginRight="25dp"
-            android:textSize="@dimen/itemsize"
+            android:textSize="@dimen/subitemsize2"
 
             />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/lin2012"
+        android:orientation="horizontal">
         <TextView
             android:id="@+id/textView4"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/subitemsize"
-            android:layout_marginBottom="15dp"
+            android:textSize="@dimen/subitemsize2"
+            android:layout_marginBottom="2dp"
             android:layout_marginLeft="25dp"
-            android:layout_marginTop="6dp"
             android:layout_marginRight="25dp"
             />
         <TextView
             android:id="@+id/price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/subitemsize"
+            android:textSize="@dimen/subitemsize2"
             android:layout_marginLeft="25dp"
             android:gravity="end"
-            android:layout_marginTop="6dp"
             android:layout_marginRight="25dp"
             />
-
+    </LinearLayout>
         <TextView
             android:id="@+id/listtitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
             android:layout_marginRight="25dp"
             android:textSize="12sp"
             android:textStyle="italic"
-            android:layout_marginBottom="30dp"
+            android:layout_marginBottom="4dp"
             android:layout_marginLeft="25dp" />
     </LinearLayout>
 
