--- a/app/src/main/res/layout/list_items2.xml
+++ b/app/src/main/res/layout/list_items2.xml
@@ -12,18 +12,22 @@
         android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="4dp"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
-        android:textSize="@dimen/itemsize"
+        android:textSize="@dimen/subitemsize2"
 
         />
-    <TextView
-        android:id="@+id/textView4"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/subitemsize"
-        android:layout_marginBottom="15dp"
+        android:id="@+id/lin2012"
+        android:orientation="horizontal">
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/subitemsize2"
         android:layout_marginLeft="25dp"
         android:layout_marginTop="6dp"
         android:layout_marginRight="25dp"
@@ -32,14 +36,14 @@
             android:id="@+id/price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/subitemsize"
-            android:layout_marginBottom="26dp"
+            android:textSize="@dimen/subitemsize2"
             android:layout_marginLeft="25dp"
             android:gravity="end"
             android:layout_marginTop="6dp"
             android:layout_marginRight="25dp"
+            android:layout_marginBottom="4dp"
             />
     </LinearLayout>
-
+    </LinearLayout>
 
 </RelativeLayout>
