--- a/app/src/main/res/values-large/dimens.xml
+++ b/app/src/main/res/values-large/dimens.xml
@@ -3,6 +3,7 @@
 
     <dimen name="itemsize">27sp</dimen>
     <dimen name="subitemsize">21sp</dimen>
+    <dimen name="subitemsize2">17sp</dimen>
 
     <dimen name="edittextsize">26sp</dimen>
     <dimen name="edittextsizebtn">23sp</dimen>
